fixing the position and alignment of the preloader page

--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,12 @@
 }
 
 .a{
-    border: 2px dotted orange; 
     top: 50%;
     left: 1%;
     width: 100%; 
     height: 100%; 
     margin: 0 auto; 
+    padding-top: 50px; 
 }
 
 .dance{
@@ -162,6 +162,10 @@ span{
     width: 100%;
     padding-right: 2px;
     padding-left: 2px; 
+}
+
+h2{
+    padding: 20px; 
 }
 /*Animations*/ 
 @keyframes wheel{
